rename folders and defined some of the structure

--- a/index.html
+++ b/index.html
@@ -7,14 +7,29 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-    <div class="homebar">
-        <img class="logo" src="/images/RYPARIS work files-20230823T210124Z-001/RYPARIS work files/Copy of ryparis-logo.png" alt="RY Paris logo with the A as the eiffel tower">
-        <nav>
-            <a href="#">Popular Recipes</a>
-            <a href="#">What's New</a>
-            <a href="#">Catagories</a>
-            <a href="#">Meal Ideas</a>
-        </nav>
+    <div id="contentHolder">
+
+        <div class="homebar">
+            <img class="logo" src="/images/RYPARIS work files-20230823T210124Z-001/RYPARIS work files/Copy of ryparis-logo.png" alt="RY Paris logo with the A in Paris as the eiffel tower">
+            <nav>
+                <a href="#">Popular Recipes</a>
+                <a href="#">What's New</a>
+                <a href="#">Catagories</a>
+                <a href="#">Meal Ideas</a>
+            </nav>
+        </div>
+
+        <div id="homePage">
+            <p>START THE WEEK OFF RIGHT</p>
+        </div>
+
+        <div class="foodInfo">
+
+        </div>
+
+        <div class="foodInfo">
+
+        </div>
     </div>
 </body>
 </html>
