made the first image of the homepage show up

--- a/index.html
+++ b/index.html
@@ -9,27 +9,42 @@
 <body>
     <div id="contentHolder">
 
-        <div class="homebar">
-            <img class="logo" src="/images/RYPARIS work files-20230823T210124Z-001/RYPARIS work files/Copy of ryparis-logo.png" alt="RY Paris logo with the A in Paris as the eiffel tower">
+        <header class="homebar">
+            <img class="logo" src="/images/ryparis-logo.png" alt="RY Paris logo with the A in Paris as the eiffel tower">
             <nav>
                 <a href="#">Popular Recipes</a>
                 <a href="#">What's New</a>
                 <a href="#">Catagories</a>
                 <a href="#">Meal Ideas</a>
             </nav>
-        </div>
+        </header>
 
         <div id="homePage">
             <p>START THE WEEK OFF RIGHT</p>
         </div>
 
         <div class="foodInfo">
+            <h1>Everyday Catagories</h1>
+            <p></p>
+            <div>
+                <img src="" alt="">
+                <p></p>
+                
+                <img src="" alt="">
+                <p></p>
 
+                <img src="" alt="">
+                <p></p>
+            </div>
         </div>
 
         <div class="foodInfo">
 
         </div>
+        
+        <footer>
+
+        </footer>
     </div>
 </body>
 </html>
