made footer and added border to some images

--- a/index.html
+++ b/index.html
@@ -94,7 +94,14 @@
         </div>
         
         <footer>
-            
+            <div class="copyright"><span>&copy; 2020 RY PAIRS</span></div>
+                <nav>
+                    <a href="#">Site Map</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">About</a>
+                    <a href="#">Advertise</a>
+                    <a href="#">Help</a>
+                </nav>
         </footer>
     </div>
 </body>
