started on burger page and made some adjustments

--- a/burger.html
+++ b/burger.html
@@ -3,9 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bengal Burger</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="contentHolder">
+        <header class="homebar">
+            <a href="index.html"><img class="logo" src="/images/ryparis-logo.png" alt="RY Paris logo with the A in Paris as the eiffel tower"></a>
+            <nav>
+                <a href="burger.html">Popular Recipes</a>
+                <a href="#">What's New</a>
+                <a href="index.html">Catagories</a>
+                <a href="#">Meal Ideas</a>
+            </nav>
+        </header>
+
+        <div id="recipeHomePage">
+            <p>HAMBURGER OF THE WEEK</p>
+        </div>
+
+        <div class="recipeTime">
+            <h3>Time</h3>
+            <div class="recipeInfo">
+                <div>
+                    <h4>Level: <span>Easy</span></h4>
+                    <h4>Total: <span>25 min</span></h4>
+                </div>
+                <div>
+                    <h4>Prep: <span>10 min</span></h4>
+                    <h4>Cook: <span>15 min</span></h4>
+                </div>
+                <div>
+                    <h4>Yeild: <span>4 Hamburgers</span></h4>
+                </div>
+            </div>
+        </div>
+        <div class="recipeDoc">
+            <div class="recipeName">
+                <h1>Bengal Burger</h1>
+                <div class="review">
+                    <span>&#9733;&#9733;&#9733;&#9733;&#9733;</span>
+                    <span>26 Reviews</span>
+                </div>
+                <div class="recipeSave">
+                    <button>Save Recipes</button>
+                    <span><i class="fa-solid fa-print fa-xs" style="color: #000000;"></i></span>
+                </div>
+            </div>
+            
+        </div>
+        <footer>
+            <div class="copyright"><span>&copy; 2020 RY PAIRS</span></div>
+                <nav>
+                    <a href="#">Site Map</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">About</a>
+                    <a href="#">Advertise</a>
+                    <a href="#">Help</a>
+                </nav>
+        </footer>
+    </div>
 </body>
 </html>
