--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RY Paris</title>
     <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <body>
-    <div id="contentHolder">
+    <div class="contentHolder">
 
         <header class="homebar">
-            <img class="logo" src="/images/ryparis-logo.png" alt="RY Paris logo with the A in Paris as the eiffel tower">
+            <a href="index.html"><img class="logo" src="/images/ryparis-logo.png" alt="RY Paris logo with the A in Paris as the eiffel tower"></a>
             <nav>
-                <a href="#">Popular Recipes</a>
+                <a href="burger.html">Popular Recipes</a>
                 <a href="#">What's New</a>
-                <a href="#">Catagories</a>
+                <a href="index.html">Catagories</a>
                 <a href="#">Meal Ideas</a>
             </nav>
         </header>
