start on the recipe for the burger

--- a/burger.html
+++ b/burger.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="recipeSave">
                     <button>Save Recipes</button>
-                    <span><i class="fa-solid fa-print fa-xs" style="color: #000000;"></i></span>
+                    <span></span>
                 </div>
             </div>
             
