--- a/burger.html
+++ b/burger.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bengal Burger</title>
+    <script src="https://kit.fontawesome.com/5d38fb97c4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -41,7 +42,7 @@
 
         <div class="recipeContainer">
             <div class="recipeName">
-                <h1>Bengal Burger</h1>
+                <h1>BENGAL BURGER</h1>
 
                 <div class="review">
                     <span class="stars">&#9733;&#9733;&#9733;&#9733;&#9733;</span>
@@ -50,7 +51,7 @@
 
                 <div class="recipeSave">
                     <button>Save Recipes</button>
-                    <span></span>
+                    <img src="images/Printer-icon-transp.png" alt="Printer Icon" id="printRecipe">
                 </div>
             </div>
             <div class="recipeHook">
@@ -99,7 +100,12 @@
                 </div>
             </div>
 
-        </div> <!-- this is the end of the recipe doc itself i made the  recipe into a  doc so you could just print that -->
+        </div> 
+        <div class="vid">
+            <h2>Tutorial for Refrence</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/OsY85e9uIMw?si=cYv6vnCNcuEfTOM8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </div>
+        <!-- this is the end of the recipe doc itself i made the  recipe into a  doc so you could just print that -->
         <footer>
             <div class="copyright"><span>&copy; 2020 RY PAIRS</span></div>
                 <nav>
