made printer icon svg and fixed some spacing

--- a/burger.html
+++ b/burger.html
@@ -51,7 +51,7 @@
 
                 <div class="recipeSave">
                     <button>Save Recipes</button>
-                    <img src="images/Printer-icon-transp.png" alt="Printer Icon" id="printRecipe">
+                    <object data="images/Printer-icon.svg" type="image/svg+xml" id="printerIcon"></object>
                 </div>
             </div>
             <div class="recipeHook">
